# ferrisdb

./: .gitignore  .prettierignore  AGENTS.md  CI-OPTIMIZATION-PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  NAVIGATION-AUDIT-REPORT.md  README.md  ROADMAP.md  SECURITY.md  _typos.toml  deny.toml
ferrisdb-storage/: Cargo.toml  README.md  proptest.toml
ferrisdb-storage/benches/: README.md  bytes_ext_allocation_proof.rs  bytes_ext_benchmarks.rs  wal_benchmarks.rs  wal_performance.rs  wal_performance_proofs.rs
ferrisdb-storage/src/: lib.rs
ferrisdb-storage/src/format/: mod.rs
ferrisdb-storage/src/memtable/: mod.rs  skip_list.rs  skiplist.rs
ferrisdb-storage/src/sstable/: mod.rs  reader.rs  writer.rs
ferrisdb-storage/src/utils/: README.md  bytes_ext.rs  mod.rs
ferrisdb-storage/src/wal/: README.md  header.rs  log_entry.rs  metrics.rs  mod.rs  reader.rs  writer.rs
ferrisdb-storage/tests/: README.md  wal_concurrent_tests.rs  wal_format_tests.rs  wal_integration_tests.rs  wal_property_tests.rs
ferrisdb-tutorials/tutorial-02-wal/: Cargo.toml  README.md
ferrisdb-tutorials/tutorial-02-wal/benches/: wal_performance.rs
ferrisdb-tutorials/tutorial-02-wal/examples/: exercises.rs
ferrisdb-tutorials/tutorial-02-wal/examples/exercises/: README.md  challenge_01_compression.rs  (+1 more)
ferrisdb-tutorials/tutorial-02-wal/exercises/: challenge_02_rotation.rs
ferrisdb-tutorials/tutorial-02-wal/src/: lib.rs  main.rs
ferrisdb-tutorials/tutorial-02-wal/tests/: integration_tests.rs  solutions.rs  step_01_tests.rs  step_02_tests.rs  step_03_tests.rs  step_04_tests.rs  step_05_tests.rs
(+180 files in other folders)
