[package]
name = "ferrisdb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrisdb-core = { path = "../ferrisdb-core" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
bytes = "1.7"
crc32fast = "1.4"
crossbeam = "0.8"
rand = "0.9"
parking_lot = "0.12"
lz4 = "1.24"
snap = "1.1"
tempfile = "3.10"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.6"
proptest = "1.5"
env_logger = "0.11"
stats_alloc = "0.1"
alloc_counter = "0.0.4"
libc = "0.2"

[features]
default = []
# Test categorization features
slow-tests = []
property-tests = []
integration-tests = []
benchmark-tests = []
allocation-testing = []

[[bench]]
name = "wal_performance"
harness = false

[[bench]]
name = "wal_benchmarks"
harness = false

[[bench]]
name = "wal_performance_proofs"
harness = false

[[bench]]
name = "bytes_ext_benchmarks"
harness = false

[[bench]]
name = "bytes_ext_allocation_proof"
harness = false
